public enum TipoLista {
    MAYORISTA,
    MINORISTA
}
